--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                   </div>
                   <!-- /.col-lg-8 -->
                   <div class="col-lg-4 col-md-12">
-                    <img src="img/shutterstock_574398823@1X (1).png" alt="человек" >
+                    <img src="img/3.png" alt="человек" >
                   </div>
                   <!-- /.col-lg-4 -->
                 </div>
@@ -72,25 +72,25 @@
             <div class="row">
               <div class="col-lg-3 col-md-6">
                 <div class="work-content-block text-center">
-                  <img src="img/work/coding (1)@1X (1).png" alt="coding">
+                  <img src="img/work/1.png" alt="coding">
                   <p>Вёрстка лендинг–страниц <br> и сайтов любой сложности</p>
                 </div>
               </div>
               <div class="col-lg-3 col-md-6">
                 <div class="work-content-block text-center">
-                  <img src="img/work/responsive@1X (1).png" alt="responsive">
+                  <img src="img/work/3.png" alt="responsive">
                   <p>Адаптивная вёрстка под все браузеры и устройства</p>
                 </div>
               </div>
               <div class="col-lg-3 col-md-6">
                 <div class="work-content-block text-center">
-                  <img src="img/work/programming@1X (1).png" alt="programming">
+                  <img src="img/work/4.png" alt="programming">
                   <p>Frontend–разработка <br> и программирование</p>
                 </div>
               </div>
               <div class="col-lg-3 col-md-6">
                 <div class="work-content-block text-center">
-                  <img src="img/work/tools-and-utensils@1X (1).png" alt="tools">
+                  <img src="img/work/2.png" alt="tools">
                   <p>Исправление и доработка существующей вёрстки</p>
                 </div>
               </div>
@@ -117,19 +117,19 @@
             <div class="row">
               <div class="col-lg-4">
                 <div class="portfolio-content-block text-center">
-                  <img src="img/portfolio/Layer 2@1X (1).png" alt="Layer 2">
+                  <img src="img/portfolio/2.png" alt="Layer 2">
                   <p>Сайт психолога Веры Антоновой</p>
                 </div>
               </div>
               <div class="col-lg-4">
                 <div class="portfolio-content-block text-center">
-                  <img src="img/portfolio/Layer 1@1X (1).png" alt="Layer 1">
+                  <img src="img/portfolio/1.png" alt="Layer 1">
                   <p>Сайт магазина детской одежды</p>
                 </div>
               </div>
               <div class="col-lg-4">
                 <div class="portfolio-content-block text-center">
-                  <img src="img/portfolio/Layer 3@1X (1).png" alt="Layer 3">
+                  <img src="img/portfolio/3.png" alt="Layer 3">
                   <p>Сайт магазина «Рыболов»</p>
                 </div>
               </div>
@@ -178,8 +178,8 @@
             <!--/.col-lg-2-->
             <div class="col-lg-3 offset-lg-2 col-md-12">
               <div class="contacts-link">
-                <a href="tel:+74999957755"><img src="img/call-answer (1)@1X (1).png" alt="tel">+7 (499) 995-77-55</a>
-                <a href="mailto:dmitry@alekseev.com"><img src="img/envelope (1)@1X (1).png" alt="mail"> dmitry@alekseev.com</a>
+                <a href="tel:+74999957755"><img src="img/1.png" alt="tel">+7 (499) 995-77-55</a>
+                <a href="mailto:dmitry@alekseev.com"><img src="img/2.png" alt="mail"> dmitry@alekseev.com</a>
               </div>
               <!--./contacts-link-->
             </div>
